# democrasim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
democrasim/: __init__.py
democrasim/core/: __init__.py  election.py  policy.py  strategic.py  voter.py
democrasim/metrics/: economic.py  inequality.py  qaly.py  uncertainty.py
democrasim/models/: candidate.py  intervention.py  outcome.py
democrasim/utils/: __init__.py  distributions.py  validation.py  visualization.py
docs/: _config.yml  _toc.yml  intro.md  strategic_model.md
examples/: advanced_streamlit_app.py  icivics_streamlit_app.py  inequality_simulation.py  qaly_simulation.py  strategic_equilibrium.py  streamlit_app.py
tests/: test_election.py  test_intervention.py  test_metrics.py  test_policy.py  test_strategic.py  test_voter.py
