[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "democrasim"
version = "0.1.0"
description = "A package for simulating how voter interventions affect policy outcomes through elections"
readme = "README.md"
authors = [
  { name="Your Name", email="you@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Political Science",
]

dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scipy>=1.7.0",
  "squigglepy>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "pytest-cov>=2.0",
  "black>=22.0",
  "flake8>=3.9",
  "mypy>=0.910",
  "isort>=5.9",
  "pre-commit>=2.15",
]
examples = [
  "streamlit>=1.0",
  "matplotlib>=3.4",
  "plotly>=5.0",
]
metrics = [
  "lifetable>=0.1",
  "gini>=0.1",
  "scikit-learn>=1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']